    HAMA-25: Add matrix addition example (edwardyoon)
    HAMA-23: Add Hama configuration files (edwardyoon)
    HAMA-6: Add a 'who we are' page (edwardyoon)
    HAMA-7: Add some information for a new comer (edwardyoon)
    HAMA-1: Create the Hama web site (edwardyoon via Ian Holsman)
    HAMA-2: The intial donation of Hama from the google project (edwardyoon)
    
  IMPROVEMENTS
    
    HAMA-143: Improve of random_mapred() (edwardyoon)
    HAMA-138: To order, left pad with zeroes to integer key (edwardyoon)
    HAMA-135, HAMA-137: Refactor mapred, I/O package (edwardyoon)
    HAMA-134: We don't need to fill C with zeros (edwardyoon)
    HAMA-131: Add argument for the number of blocks (edwardyoon)
    HAMA-113: Random matrix generator on map/reduce (edwardyoon)
    HAMA-118: Add getting started page link (edwardyoon)
    HAMA-117: Move bytesToSubMatrix/subMatrixToBytes method 
                to submatrix class from BytesUtil (edwardyoon)
    HAMA-114: Remove unwanted code (edwardyoon)
    HAMA-107: Blocking job should be a map/reduce job (samuel via edwardyoon)
    HAMA-99: Implement setColumn(int column, Vector vector) (edwardyoon)
    HAMA-108: Implement add(int i, int j, double value) (edwardyoon)
    HAMA-103: Reduce an rows of intermediate 
                to improve the multiplication performance (edwardyoon)
    HAMA-88: DenseMatrix.close should not delete the table 
               that are aliased in HamaAdmin. (samuel via edwardyoon)
    HAMA-89: Exception Handling of a ParseException (samuel via edwardyoon)
    HAMA-77: clear the matrices in hbase after 
               quiting the shell (samuel via edwardyoon)
    HAMA-28: Implement Vector.add() method (edwardyoon)
    HAMA-78: Separate Interface and Implementation for HamaAdmin (edwardyoon)
    HAMA-76: Remove load() since it duplicated with constructor (edwardyoon)
    HAMA-74: set the number of map/reduce task 
               on the shell (samuel via edwardyoon)