@@ -40,14 +40,19 @@ public abstract class TableInputFormatBase {
   protected byte[][] inputColumns;
   protected HTable table;
   protected RowFilterInterface rowFilter;
-
+  protected static int repeat;
+  
   /**
    * space delimited list of columns
    */
   public static final String COLUMN_LIST = "hama.mapred.tablecolumns";
+  public static final String REPEAT_NUM = "hama.mapred.repeat";
   
   public void configure(JobConf job) {
     Path[] tableNames = FileInputFormat.getInputPaths(job);
+    if(job.get(REPEAT_NUM) != null) {
+      setRepeat(Integer.parseInt(job.get(REPEAT_NUM)));
+    }
     String colArg = job.get(COLUMN_LIST);
     String[] colNames = colArg.split(" ");
     byte[][] m_cols = new byte[colNames.length][];
@@ -60,6 +65,10 @@ public abstract class TableInputFormatBase {
     } catch (Exception e) {
       LOG.error(e);
     }
+  }
+
+  private void setRepeat(int parseInt) {
+    repeat =  parseInt;
   }
 
   public void validateInput(JobConf job) throws IOException {
@@ -94,7 +103,11 @@ public abstract class TableInputFormatBase {
    * @see org.apache.hadoop.mapred.InputFormat#getSplits(org.apache.hadoop.mapred.JobConf, int)
    */
   public InputSplit[] getSplits(JobConf job, int numSplits) throws IOException {
-    byte [][] startKeys = this.table.getStartKeys();
+    byte [][] startKeys = null;
+    try {
+      startKeys = this.table.getStartKeys();
+    } catch (NullPointerException e) { }
+    
     if (startKeys == null || startKeys.length == 0) {
       throw new IOException("Expecting at least one region");
     }
